# RegexTrans

./: .gitignore  README.md
client/: example.json  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  index.css
server/: CMakeLists.txt
server/include/: dfa.hpp  input.hpp  mdfa.hpp  nfa.hpp  share.hpp  state_dfa.hpp  state_mdfa.hpp  state_nfa.hpp
server/src/: dfa.cpp  input.cpp  main.cpp  mdfa.cpp  nfa.cpp  state_dfa.cpp  state_mdfa.cpp  state_nfa.cpp
